--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "rootDir": "src",
+        "baseUrl": "./src",
         "outDir": "./dist",
         "module": "commonjs",
         "target": "es2019",
