--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     },
     "rules" : {
         "@typescript-eslint/no-redeclare": "off",
-        "@typescript-eslint/explicit-module-boundary-types": "off"
+        "@typescript-eslint/return-await": "off",
+        "@typescript-eslint/comma-spacing": "off"
     }
 }
