--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "rules" : {
         "@typescript-eslint/no-redeclare": "off",
         "@typescript-eslint/return-await": "off",
-        "@typescript-eslint/comma-spacing": "off"
+        "@typescript-eslint/comma-spacing": "off",
+        "@typescript-eslint/strict-boolean-expressions": "off"
     }
 }
