--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.18",
     "@types/node": "^14.14.11",
     "@types/validator": "^13.1.1",
@@ -33,6 +34,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "validator": "^13.5.2"
   }
 }
