--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cpf-cnpj-validator": "^1.0.3",
     "express": "^4.17.1",
     "fast-glob": "^3.2.4",
     "mongodb": "^3.6.3",
