--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
     "compilerOptions": {
         "baseUrl": "./src",
-        "outDir": "./dist",
+        "outDir": "dist",
         "module": "commonjs",
         "target": "es2019",
-        "esModuleInterop": true,
-        "allowJs": true
+        "esModuleInterop": true
     },
+    "include": [
+      "src"
+    ],
     "exclude": [
-        "node_modules"
+      "**/*.spec.ts",
+      "**/*.test.ts"
     ]
 }
