--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         "@typescript-eslint/no-redeclare": "off",
         "@typescript-eslint/return-await": "off",
         "@typescript-eslint/comma-spacing": "off",
-        "@typescript-eslint/strict-boolean-expressions": "off"
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/consistent-type-definitions": "off"
     }
 }
