--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,17 @@
 {
     "compilerOptions": {
-        "baseUrl": "./src",
-        "outDir": "dist",
-        "module": "commonjs",
-        "target": "es2019",
-        "esModuleInterop": true,
-        "sourceMap": true,
-        "rootDir": "src"
+      "outDir": "dist",
+      "module": "commonjs",
+      "target": "es2019",
+      "esModuleInterop": true,
+      "sourceMap": true,
+      "rootDir": "src",
+      "baseUrl": "src",
+      "paths": {
+        "@/*" : ["*"]
+      }
     },
     "include": [
       "src"
-    ],
-    "exclude": [
-      "**/*.spec.ts",
-      "**/*.test.ts"
     ]
 }
